[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
image = "0.24"
win-screenshot = "4.0.5"
rayon = "*"
rand = "0.8"
chrono = "*"
tesseract-sys = "*"
